3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

New Arrow and Pet Code:
Add bowmode and petmode commands.  Allowing the player to change the firing
style for bows to one of either threewide, or spreadshot.
Allow players to change the operating modes of his pet with petmode.  Can be
either seek and destroy, defend, or normal historical behavior.
Change bows to impart speed to arrows based on damage and other magical
plusses.  Damage decays over distance, to stop arrows from flying forever.
Very fast moving arrows will pierce multiple targets.  An arrow moving at a
speed greater than 10.0 will go straight through a target, losing 1.0 of
speed in the process.
Change magic missile to use spell_find_dir instead of find_dir to stop it
from flying in a circle and hitting the caster, and to make it stop
flying into walls to hit creatures behind the walls.

Various bug fixes:
common/living.c: Reset glow_radius for players, so they stop glowing
   after they snuff out their torch or whatever.
server/apply.c: Fix message about improving armour so that it is now
   accurate.
server/monster.c: Add some debug lines that may show cause of excess
   monster hp.
server/spell_effect.c: fix compile warning in summon_pet().  Clean up
   indentation of alchemy functions, but functional changes is to
   insert gold nuggets below player (so more of the actions work),
   as well as to reset the view position, so that it won't have the
   'previous 50' object selection.  Add suggested parens in
   cast_detection.
server/weather.c: Fix crash in weather code if snow was only object
   on space.
MSW 2002-12-20

+++
server/weather.c:
More weather routines:
