@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/treasure.c: Fix initialization of treasure structs to use calloc.
+server/player.c: Fix infinite loop.
+socket/loop.c: Make sure we put in null terminator for socket data.
+MSW 2002-12-26
+
+
 New Arrow and Pet Code:
 Add bowmode and petmode commands.  Allowing the player to change the firing
 style for bows to one of either threewide, or spreadshot.
